@@ -1,3 +1,9 @@
+2002-08-26  Don Porter <dgp@users.sf.net>
+
+	* win/Makefile.in:	Removed dependence on the (parts of) the
+	* win/winMain.c:	tcltest executable on Windows.  It was not
+	used, and the dependency complicated the Makefile.  [Bug 592638].
+
 2002-08-20  Don Porter <dgp@users.sf.net>
 
 	* README:		Bumped version number to 8.4b3 to distinguish
